--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         }  
     </style>  
 </head>  
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E6Z7XTRGBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E6Z7XTRGBG');
+</script>
 <body class="bg-gray-100 text-apple-dark">  
     <header class="bg-apple-blue text-white p-4 md:p-6 shadow-lg">  
         <div class="container mx-auto">  
